Fixed spacing so that it is easier to read and responsive. Also changed the layout of the navigation bar. This is done after te pull request.

--- a/web-ui/src/app/menu/menu.component.scss
+++ b/web-ui/src/app/menu/menu.component.scss
@@ -60,3 +60,9 @@
         color: $text-primary-color;
     }
 }
+
+.container {
+    max-width: 2000px;
+    margin-left: 1em;
+    margin-right: 1em;
+}
