--- a/web-ui/src/app/search/search.component.scss
+++ b/web-ui/src/app/search/search.component.scss
@@ -60,3 +60,17 @@
         color: $text-primary-color;
     }
 }
+
+.columns:last-child {
+    margin-bottom: -3.75rem;
+}
+
+.columns {
+    margin-left: -0.75rem;
+    margin-right: -0.75rem;
+    margin-top: -3.75rem;
+}
+
+.column.is-offset-1, .column.is-offset-1-tablet {
+    margin-left: 8.63333%;
+}
