--- a/web-ui/src/shared.scss
+++ b/web-ui/src/shared.scss
@@ -69,7 +69,3 @@ menu {
     margin: 0;
     padding: 0;
 }
-
-.section {
-    padding: 2rem 22.5rem;
-}
